--- a/tox.ini
+++ b/tox.ini
@@ -163,3 +163,8 @@ ignore = E122,E127,E241,E402,E731
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*
 max_line_length = 130
 
+[testenv:doc]
+changedir = docs
+commands = make html
+basepython = python3.4
+deps = -rdocs/requirements-py3.txt
