Use cmtype to restrict page type for Cat.articles
- Page.articles
  - change sortby default from "" to None
- APISite.categorymembers
  - add param member_type
  - change sortby default from "" to None
  - remove locals()
- add misc tests for namespace, including Namespace,
  ListGenerator and APISite._generator

Bug: T67981
Change-Id: I46a53497a86c3ab3761f9166b6c268c7a3c5f6be

--- a/tox.ini
+++ b/tox.ini
@@ -94,6 +94,7 @@ commands = flake8 \
     scripts/watchlist.py \
     setup.py \
     tests/__init__.py \
+    tests/utils.py \
     tests/archivebot_tests.py \
     tests/category_tests.py \
     tests/date_tests.py \
