--- a/requirements.txt
+++ b/requirements.txt
@@ -59,3 +59,6 @@ oursql
 
 # scripts/script_wui.py depends on Lua, which is not available using pip
 # but can be obtained from: https://github.com/bastibe/lunatic-python
+
+# core HTML comparison parser in diff module
+beautifulsoup4
