--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
 
 install:
   - if [[ "$SITE_ONLY" == '1' ]]; then export USE_NOSE=1; fi
-  - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then pip install ordereddict unittest2==0.6.0; fi
+  - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then pip install unittest2==0.6.0; fi
   - pip install six
   - export GITHUB_USER=`echo $TRAVIS_REPO_SLUG | cut -d '/' -f 1`
   - mkdir ~/.pywikibot
@@ -51,9 +51,9 @@ script:
   - if [[ "$USE_NOSE" == "1" ]]; then
       if [[ "$SITE_ONLY" == "1" ]]; then
         echo "Running site tests only code ${LANGUAGE} on family ${FAMILY}" ;
-        nosetests tests -v -a "family=$FAMILY,code=$LANGUAGE" ;
+        python setup.py nosetests --tests tests -v -a "family=$FAMILY,code=$LANGUAGE" ;
       else
-        nosetests tests -v ;
+        python setup.py nosetests --tests tests -v ;
       fi ;
     else
       python setup.py test ;
