Add site detection tests
Bug: T88601
Change-Id: I73506739c68c42c1150270c991ad1217cf7d3793

--- a/tox.ini
+++ b/tox.ini
@@ -143,6 +143,7 @@ commands = flake8 \
     tests/pwb/ \
     tests/pwb_tests.py \
     tests/script_tests.py \
+    tests/site_detect_tests.py \
     tests/tests_tests.py \
     tests/timestripper_tests.py \
     tests/thread_tests.py \
