Fix indents and enable E122 and E127
Change-Id: I064d67bd7f85fc0c47e07ae5d30f61dbbd3be92b

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist = flake8,flake8-py3,flake8-docstrings-mandatory,py26,py27,py34
 
 [params]
 nose_skip = --ignore-files=(gui\.py|botirc\.py|rcstream\.py)
-flake8_ignore = D102,D103,E122,E127,{[flake8]ignore}
+flake8_ignore = D102,D103,{[flake8]ignore}
 
 [testenv]
 setenv =
