--- a/tox.ini
+++ b/tox.ini
@@ -62,6 +62,7 @@ commands = flake8 \
     scripts/basic.py \
     scripts/blockpageschecker.py \
     scripts/capitalize_redirects.py \
+    scripts/category.py \
     scripts/category_redirect.py \
     scripts/claimit.py \
     scripts/clean_sandbox.py \
@@ -86,6 +87,7 @@ commands = flake8 \
     scripts/states_redirect.py \
     scripts/template.py \
     scripts/transferbot.py \
+    scripts/unusedfiles.py \
     scripts/upload.py \
     scripts/watchlist.py \
     setup.py \
