Use warnings for deprecation
Warnings are now captured by logging, fixing buggy code from compat.
  https://www.mediawiki.org/wiki/Special:Code/pywikipedia/11420
Code deprecation is now ignored by default.
Config and command line args deprecation are shown by default.

Also
- fix deprecated config variable available_ssl_project
- lower case of DEPRECATED in redirect_func and DeprecationWrapper
- tool manage_wrapping for decorators
- remove use of locals() in deprecated_args
- use self._logger in ThreadedList debug calls
- intersect_generators debug call moved into ThreadedList
- Ignore import warnings when loading i18n message bundles

And deprecate methods which were too noisy to deprecate previously.

Bug: T72970
Change-Id: I95000736f3fc9ccb80fe32106fb6516abc62cdd6

--- a/tox.ini
+++ b/tox.ini
@@ -55,6 +55,7 @@ commands = flake8 \
     pywikibot/pagegenerators.py \
     pywikibot/plural.py \
     pywikibot/throttle.py \
+    pywikibot/tools.py \
     pywikibot/userinterfaces/__init__.py \
     pywikibot/userinterfaces/terminal_interface.py \
     pywikibot/weblib.py \
