api.py: add docstrings
Change-Id: Iaae9bdb56d654d53958c4c7841ad53bf86e34200

--- a/tox.ini
+++ b/tox.ini
@@ -43,6 +43,7 @@ commands = flake8 \
     pywikibot/compat/ \
     pywikibot/config2.py \
     pywikibot/data/__init__.py \
+    pywikibot/data/api.py \
     pywikibot/data/wikistats.py \
     pywikibot/diff.py \
     pywikibot/echo.py \
