--- a/tox.ini
+++ b/tox.ini
@@ -100,6 +100,7 @@ commands = flake8 \
     tests/edit_failure_tests.py \
     tests/exceptions_tests.py \
     tests/family_tests.py \
+    tests/file_tests.py \
     tests/i18n/ \
     tests/l10n_tests.py \
     tests/pwb/ \
