Disable new pep8 v1.6 rules E402 and E731
Bug: T87409
Change-Id: I66d97493ca90533c38dd67c2c2849545799857a1

--- a/tox.ini
+++ b/tox.ini
@@ -13,13 +13,13 @@ commands = python setup.py test
 install_command = pip install --process-dependency-links --pre {opts} {packages}
 
 [testenv:flake8]
-commands = flake8 --ignore=D102,D103,E122,E127,E241 {posargs}
+commands = flake8 --ignore=D102,D103,E122,E127,E241,E402,E731 {posargs}
 basepython = python2.7
 deps = flake8
        flake8-docstrings
 
 [testenv:flake8-py3]
-commands = flake8 --ignore=D102,D103,E122,E127,E241 {posargs}
+commands = flake8 --ignore=D102,D103,E122,E127,E241,E402,E731 {posargs}
 basepython = python3
 deps = flake8
        flake8-docstrings
@@ -136,12 +136,12 @@ deps =
 commands = {posargs}
 
 [flake8]
-ignore = E122,E127,E241,E265
+ignore = E122,E127,E241,E265,E402,E731
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*
 max_line_length = 130
 
 [pep8]
-ignore = E122,E127,E241
+ignore = E122,E127,E241,E402,E731
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*
 max_line_length = 130
 
