Only use apt-get for PYSETUP_TEST_EXTRAS
Saves ~10s per build

Change-Id: Ie9585a26a9e94f6d1014a6cdbcb74faf4a56758e

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ python:
   - '2.6'
 
 before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -y liblua5.1-dev
+  - if [[ "$PYSETUP_TEST_EXTRAS" == "1" ]]; then sudo apt-get update -qq; fi
+  - if [[ "$PYSETUP_TEST_EXTRAS" == "1" ]]; then sudo apt-get install -y liblua5.1-dev; fi
 
 install:
   - if [[ "$SITE_ONLY" == '1' ]]; then export USE_NOSE=1; fi
