Import daemonize from compat
Minor pep changes.

Bug: T89581
Change-Id: I8daac25c55ad4961b75641b44edbd218760d9186

--- a/tox.ini
+++ b/tox.ini
@@ -42,6 +42,7 @@ commands = flake8 \
     pywikibot/comms/rcstream.py \
     pywikibot/compat/ \
     pywikibot/config2.py \
+    pywikibot/daemonize.py \
     pywikibot/data/__init__.py \
     pywikibot/data/api.py \
     pywikibot/data/wikistats.py \
