--- a/tox.ini
+++ b/tox.ini
@@ -55,7 +55,7 @@ commands = flake8 \
     pywikibot/pagegenerators.py \
     pywikibot/plural.py \
     pywikibot/throttle.py \
-    pywikibot/tools.py \
+    pywikibot/tools/__init__.py \
     pywikibot/userinterfaces/__init__.py \
     pywikibot/userinterfaces/terminal_interface.py \
     pywikibot/weblib.py \
