--- a/.travis.yml
+++ b/.travis.yml
@@ -47,9 +47,11 @@ install:
       echo "('$PYWIKIBOT2_USERNAME', '$USER_PASSWORD')" > ~/.pywikibot/passwordfile ;
     fi
 
-  - cd externals/httplib2
-  - python setup.py install
-  - cd ../..
+  - if [[ "$EXTERNALS_HTTPLIB2" == "1" ]]; then
+      (cd externals/httplib2 && python setup.py install) ;
+    else
+      rm -rf externals/httplib2 ;
+    fi
 
   - python -c "import setuptools; print(setuptools.__version__)"
 
@@ -73,10 +75,10 @@ env:
     # See http://docs.travis-ci.com/user/encryption-keys/ for more information.
     - secure: kofInMlisiTBt9o/Ustc/vySlkKfxGzGCX2LwA1D2waym8sDTS0o5gMJ5LsrT/BUKwZbe1vLozPHqZrrkQvsdTml+DpZuotzdILs0m0f3BUoexEC6OON5IDljuxFyETrD1Ug44ih5Mc4lVFOdTcBzg501ZmswGwQrBvg/OyEFfE=
   matrix:
-    - LANGUAGE=en FAMILY=wikipedia
+    - LANGUAGE=en FAMILY=wikipedia EXTERNALS_HTTPLIB2=1
     - LANGUAGE=ar FAMILY=wikipedia PYSETUP_TEST_EXTRAS=1
     - LANGUAGE=test FAMILY=wikidata SITE_ONLY=1
-    - LANGUAGE=fr FAMILY=wiktionary SITE_ONLY=1
+    - LANGUAGE=fr FAMILY=wiktionary SITE_ONLY=1 EXTERNALS_HTTPLIB2=1
 
 notifications:
   email:
