Fix output of setup.py nosetests
-v doesnt emit messages for each test executed.
Use --verbosity=2 instead.

Change-Id: Ib863e8f98d090591d9bbbd7823c32c1c45c1f4e9

--- a/.travis.yml
+++ b/.travis.yml
@@ -59,9 +59,9 @@ script:
   - if [[ "$USE_NOSE" == "1" ]]; then
       if [[ "$SITE_ONLY" == "1" ]]; then
         echo "Running site tests only code ${LANGUAGE} on family ${FAMILY}" ;
-        python setup.py nosetests --tests tests -v -a "family=$FAMILY,code=$LANGUAGE" ;
+        python setup.py nosetests --tests tests --verbosity=2 -a "family=$FAMILY,code=$LANGUAGE" ;
       else
-        python setup.py nosetests --tests tests -v ;
+        python setup.py nosetests --tests tests --verbosity=2 ;
       fi ;
     else
       python setup.py test ;
