Report when cacerts is missing
Bug: T97392
Change-Id: I5598cf0767b49e6e18bc1a26daff4cb3f82ffad3

--- a/tox.ini
+++ b/tox.ini
@@ -92,6 +92,7 @@ commands = flake8 \
     scripts/transferbot.py \
     scripts/unusedfiles.py \
     scripts/upload.py \
+    scripts/version.py \
     scripts/watchlist.py \
     setup.py \
     tests/__init__.py \
