--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ language: python
 python:
   - '2.7'
   - '3.3'
+  - '3.4'
   - '2.6'
 
 # OSX builds are not yet available
@@ -77,11 +78,27 @@ env:
     # the github repository 'wikimedia/pywikibot-core'.
     # See http://docs.travis-ci.com/user/encryption-keys/ for more information.
     - secure: kofInMlisiTBt9o/Ustc/vySlkKfxGzGCX2LwA1D2waym8sDTS0o5gMJ5LsrT/BUKwZbe1vLozPHqZrrkQvsdTml+DpZuotzdILs0m0f3BUoexEC6OON5IDljuxFyETrD1Ug44ih5Mc4lVFOdTcBzg501ZmswGwQrBvg/OyEFfE=
+
   matrix:
     - LANGUAGE=en FAMILY=wikipedia EXTERNALS_HTTPLIB2=1 PYWIKIBOT2_TEST_PROD_ONLY=1
     - LANGUAGE=fr FAMILY=wiktionary PYSETUP_TEST_EXTRAS=1 PYWIKIBOT2_TEST_PROD_ONLY=1 PYWIKIBOT2_TEST_NO_RC=1
-    - LANGUAGE=wikidata FAMILY=wikidata SITE_ONLY=1
-    - LANGUAGE=ar FAMILY=wiktionary SITE_ONLY=1 EXTERNALS_HTTPLIB2=1
+
+matrix:
+  include:
+    - python: '2.7'
+      env: LANGUAGE=he FAMILY=wikivoyage SITE_ONLY=1
+    - python: '3.3'
+      env: LANGUAGE=zh FAMILY=wikisource SITE_ONLY=1 EXTERNALS_HTTPLIB2=1
+    - python: '3.4'
+      env: LANGUAGE=test FAMILY=wikidata SITE_ONLY=1
+    - python: 'nightly'
+      env: LANGUAGE=ar FAMILY=wiktionary
+    - python: '2.6'
+      env: LANGUAGE=wikidata FAMILY=wikidata SITE_ONLY=1
+
+  allow_failures:
+    - python: '2.6'
+      env: LANGUAGE=wikidata FAMILY=wikidata SITE_ONLY=1
 
 notifications:
   email:
