wikimedia username moved into Travis-CI settings
Change-Id: I4eb4ed6f9a2cfecb23e71b3e0cdc0c433a8bc5b2

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,10 +32,7 @@ install:
       pip install httplib2 ;
     fi
 
-
-  - if [[ "$GITHUB_USER" == "wikimedia" ]]; then
-      PYWIKIBOT2_USERNAME="Pywikibot-test" ;
-    else
+  - if [[ "$GITHUB_USER" != "wikimedia" ]]; then
       export PYWIKIBOT2_TEST_WRITE_FAIL=1 ;
     fi
 
