[FEAT] Move compression detection to tools
Instead of having the logic in xmlreader to determine which compression
module to use it is moving the logic into tools so that other modules
can benefit from it too.

Change-Id: I008754a55dd3d2e0a1cb346826981d83d79c1b61

--- a/tox.ini
+++ b/tox.ini
@@ -110,6 +110,7 @@ commands = flake8 \
     tests/pwb/ \
     tests/pwb_tests.py \
     tests/script_tests.py \
+    tests/tools_tests.py \
     tests/upload_tests.py \
     tests/wikidataquery_tests.py
 
