[FIX] Remove some D102 and D103 errors
This removes D102 and D103 errors for most files which only had one or
two errors and thus could easily be added to the tox.ini.

Change-Id: Ia92dc31e788e7801836842d9b4596a2fb3f740d4

--- a/tox.ini
+++ b/tox.ini
@@ -52,6 +52,7 @@ commands = flake8 \
     pywikibot/families/ \
     pywikibot/fixes.py \
     pywikibot/i18n.py \
+    pywikibot/login.py \
     pywikibot/pagegenerators.py \
     pywikibot/plural.py \
     pywikibot/throttle.py \
@@ -71,8 +72,11 @@ commands = flake8 \
     scripts/clean_sandbox.py \
     scripts/commonscat.py \
     scripts/coordinate_import.py \
+    scripts/cosmetic_changes.py \
     scripts/data_ingestion.py \
     scripts/delete.py \
+    scripts/disambredir.py \
+    scripts/fixing_redirects.py \
     scripts/flickrripper.py \
     scripts/harvest_template.py \
     scripts/illustrate_wikidata.py \
@@ -84,12 +88,14 @@ commands = flake8 \
     scripts/maintenance/__init__.py \
     scripts/newitem.py \
     scripts/pagefromfile.py \
+    scripts/piper.py \
     scripts/protect.py \
     scripts/shell.py \
     scripts/spamremove.py \
     scripts/states_redirect.py \
     scripts/template.py \
     scripts/transferbot.py \
+    scripts/unlink.py \
     scripts/unusedfiles.py \
     scripts/upload.py \
     scripts/version.py \
@@ -99,6 +105,7 @@ commands = flake8 \
     tests/utils.py \
     tests/archivebot_tests.py \
     tests/category_tests.py \
+    tests/cache_tests.py \
     tests/date_tests.py \
     tests/edit_failure_tests.py \
     tests/exceptions_tests.py \
@@ -106,10 +113,12 @@ commands = flake8 \
     tests/file_tests.py \
     tests/i18n/ \
     tests/l10n_tests.py \
+    tests/link_tests.py \
     tests/ipregex_tests.py \
     tests/pwb/ \
     tests/pwb_tests.py \
     tests/script_tests.py \
+    tests/timestripper_tests.py \
     tests/tools_tests.py \
     tests/upload_tests.py \
     tests/wikidataquery_tests.py
