[IMPROV] TouchBot: Use new functionality
The TouchBot doesn't need to overwrite run() and can let the underlying
Bot class handle it. This also separates touching and purging into two
separate bots.

Change-Id: I4151d3bd298eb87933a22a9d3f72343c5f5c0e46

--- a/tox.ini
+++ b/tox.ini
@@ -89,6 +89,7 @@ commands = flake8 \
     scripts/spamremove.py \
     scripts/states_redirect.py \
     scripts/template.py \
+    scripts/touch.py \
     scripts/transferbot.py \
     scripts/unusedfiles.py \
     scripts/upload.py \
