[flake8] Remove obsolete site.pageinterwiki() method, add some docstrings
- Remove explicit unicode literals in editarticle which are no longer needed
  due to "from __future__ import unicode_literals"
- Add two files to the flake8-docstrings-mandatory section

Change-Id: I51ce5eb9827af03e491a364f87de5a6744ce1c38

--- a/tox.ini
+++ b/tox.ini
@@ -78,6 +78,7 @@ commands = flake8 \
     scripts/data_ingestion.py \
     scripts/delete.py \
     scripts/disambredir.py \
+    scripts/editarticle.py \
     scripts/fixing_redirects.py \
     scripts/flickrripper.py \
     scripts/harvest_template.py \
@@ -89,6 +90,7 @@ commands = flake8 \
     scripts/login.py \
     scripts/maintenance/__init__.py \
     scripts/newitem.py \
+    scripts/noreferences.py \
     scripts/pagefromfile.py \
     scripts/piper.py \
     scripts/protect.py \
