[FIX] Ignore RC tests on Python nightly
The Python nightly versions fail on Travis as they wait for changes on
the Arabic Wiktionary which aren't often enough. This skips those tests.

Change-Id: I0e454494eac27761b0918cb84df5d48c2e8ec873

--- a/.travis.yml
+++ b/.travis.yml
@@ -89,7 +89,7 @@ matrix:
     - python: '3.4'
       env: LANGUAGE=test FAMILY=wikidata SITE_ONLY=1
     - python: 'nightly'
-      env: LANGUAGE=ar FAMILY=wiktionary
+      env: LANGUAGE=ar FAMILY=wiktionary PYWIKIBOT2_TEST_NO_RC=1
     - python: '2.6'
       env: LANGUAGE=wikidata FAMILY=wikidata SITE_ONLY=1
 
