Add cosmetic_changes_tests to testenv:flake8-docstrings-mandatory
Change-Id: I3a5c0d2a2449c197d92f0c00aa52bb929dfc6d47

--- a/tox.ini
+++ b/tox.ini
@@ -108,6 +108,7 @@ commands = flake8 \
     tests/archivebot_tests.py \
     tests/category_tests.py \
     tests/cache_tests.py \
+    tests/cosmetic_changes_tests.py \
     tests/date_tests.py \
     tests/edit_failure_tests.py \
     tests/exceptions_tests.py \
