--- a/.travis.yml
+++ b/.travis.yml
@@ -28,13 +28,7 @@ install:
   - mkdir ~/.python-eggs
   - chmod 700 ~/.python-eggs
 
-  # httplib2 is needed to run generate_user_files
-  - if [[ "$EXTERNALS_HTTPLIB2" == "1" ]]; then
-      (cd externals/httplib2 && python setup.py install) ;
-    else
-      rm -rf externals/httplib2 ;
-      pip install httplib2 ;
-    fi
+  - pip install requests
 
   - if [[ "$GITHUB_USER" != "wikimedia" ]]; then
       export PYWIKIBOT2_TEST_WRITE_FAIL=1 ;
@@ -80,7 +74,7 @@ env:
     - secure: kofInMlisiTBt9o/Ustc/vySlkKfxGzGCX2LwA1D2waym8sDTS0o5gMJ5LsrT/BUKwZbe1vLozPHqZrrkQvsdTml+DpZuotzdILs0m0f3BUoexEC6OON5IDljuxFyETrD1Ug44ih5Mc4lVFOdTcBzg501ZmswGwQrBvg/OyEFfE=
 
   matrix:
-    - LANGUAGE=en FAMILY=wikipedia EXTERNALS_HTTPLIB2=1 PYWIKIBOT2_TEST_PROD_ONLY=1
+    - LANGUAGE=en FAMILY=wikipedia PYWIKIBOT2_TEST_PROD_ONLY=1
     - LANGUAGE=fr FAMILY=wiktionary PYSETUP_TEST_EXTRAS=1 PYWIKIBOT2_TEST_PROD_ONLY=1 PYWIKIBOT2_TEST_NO_RC=1
 
 matrix:
@@ -88,7 +82,7 @@ matrix:
     - python: '2.7'
       env: LANGUAGE=he FAMILY=wikivoyage SITE_ONLY=1
     - python: '3.3'
-      env: LANGUAGE=zh FAMILY=wikisource SITE_ONLY=1 EXTERNALS_HTTPLIB2=1
+      env: LANGUAGE=zh FAMILY=wikisource SITE_ONLY=1
     - python: '3.4'
       env: LANGUAGE=test FAMILY=wikidata SITE_ONLY=1
     - python: 'nightly'
