--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@
 # It is organised so that simple requirements
 # are processed first, and more difficult packages
 # are last.
-# All dependencies other than  httplib2 are optional.
+# All dependencies other than requests are optional.
 #
 # It is good practise to install packages using the system
 # package manager if it has a packaged version.  If you are
@@ -19,7 +19,7 @@
 # $ awk -F '[#>=]' '{print $1}' requirements.txt | xargs apt-cache search
 
 # mandatory; see README.conversion.txt
-httplib2>=0.9.0
+requests
 
 # core interwiki_graph.py:
 pydot
