--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 # See tests/README.rst for instructions for using travis with developer builds.
 language: python
 
+sudo: false
+
 python:
   - '2.7'
   - '3.3'
@@ -12,12 +14,12 @@ os:
   - linux
   - osx
 
-before_install:
-  - if [[ "$PYSETUP_TEST_EXTRAS" == "1" ]]; then sudo apt-get update -qq; fi
-  - if [[ "$PYSETUP_TEST_EXTRAS" == "1" ]]; then sudo apt-get install -y liblua5.1-dev; fi
+addons:
+  apt:
+    packages:
+      - liblua5.1-0-dev
 
 install:
-
   - if [[ "$SITE_ONLY" == '1' ]]; then export USE_NOSE=1; fi
   - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then pip install unittest2==0.8.0; fi
   - pip install six
