Add async_request test
Use Queue.mark_done so that tests can use Queue.join.

Bug: T98439
Change-Id: I8e80d26e8a8a09cddbf26b47c27ffb61a8b0d7e4

--- a/tox.ini
+++ b/tox.ini
@@ -111,6 +111,7 @@ commands = flake8 \
     tests/cache_tests.py \
     tests/cosmetic_changes_tests.py \
     tests/date_tests.py \
+    tests/edit_tests.py \
     tests/edit_failure_tests.py \
     tests/exceptions_tests.py \
     tests/family_tests.py \
