--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -11,6 +11,8 @@ environment:
     PYWIKIBOT2_DIR: "%appdata%\\Pywikibot"
     PYWIKIBOT2_USER_CONFIG: "%appdata%\\Pywikibot\\user-config.py"
 
+    PYSETUP_TEST_EXTRAS: "1"
+
   matrix:
 
     # Pywikibot support matrix suggests 'should run' on Python 2.6.5+
