disabling google in requirements.txt
On some systems, this causes all imports in Python to fail with
  TypeError: ('Not a package:', ...)

This should be solved when the upstream pull request
  https://github.com/MarioVilas/google/pull/12 ,
which reworks the package structure, is merged.

Change-Id: I556a0b7c9cc024b1cdf4f6a1b57ad4e926a13ec3

--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ pydot
 
 # core pagegenerators
 pYsearch
-google
+# google #  removed until https://github.com/MarioVilas/google/pull/12 is merged
 
 # scripts/script_wui.py:
 crontab
