--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,9 @@ future ; python_version < '2.7'
 
 ipaddr>=2.1.10 ; python_version < '3'
 
+git+https://github.com/jayvdb/unicodedata2@issue_2#egg=unicodedata2-7.0.0 ; python_version < '2.7'
+unicodedata2 ; python_version >= '2.7'
+
 # core interwiki_graph.py:
 git+https://github.com/nlhepler/pydot#egg=pydot-1.0.29
 
