[FIX] InsecurePlatformWarning on Python <2.7.9
Install requests[security] on Python <2.7.9

For more details see:
https://urllib3.readthedocs.org/en/latest/security.html#insecureplatformwarning

Bug: T103769
Change-Id: I1d4a0d71bd1573584231823a7e27c87df12d47a8

--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,15 @@
 # mandatory; see README.conversion.txt
 requests
 
+# Dependency of pyOpenSSL. Use specific version to avoid expected
+# DeprecationWarning
+cryptography<=0.8.2 ; python_version < '2.7'
+
+# requests security extra
+pyOpenSSL ; python_full_version < '2.7.9'
+ndg-httpsclient ; python_full_version < '2.7.9'
+pyasn1 ; python_full_version < '2.7.9'
+
 future ; python_version < '2.7'
 # core interwiki_graph.py:
 git+https://github.com/nlhepler/pydot#egg=pydot-1.0.29
