enable google in requirements.txt
https://github.com/MarioVilas/google/pull/12 has been
merged and released on pypi

This reverts commit 72d1d8924a718a5e1933ad472bc1b98cf5c0852b.

Bug: T102314
Change-Id: Ie4b1749dc08ea6851911e237f0b7f3f3b20b3e62

--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ pydot
 
 # core pagegenerators
 pYsearch
-# google #  removed until https://github.com/MarioVilas/google/pull/12 is merged
+google >= 1.7
 
 # scripts/script_wui.py:
 crontab
