[bugfix] enable misspelling.py for misspellingTemplate localisation
disambPage.templatesWithParams() return the template page and
page.title() includes the namespace. The misspellingTemplate names doesn't
include the namespace and comparing both does never fit.

The generator is assigned after the constructor of the super class was
called because it uses the class' site object.

- remove obsolete misspellingTemplate entries
- Add method docs
- shorten lines beneath 80 chars
- change lang code index and comparing operator
- use placeholders for arguments in setSummaryMessage
- enable self.site and inherit mysite, mylang
- add script to flake8-docstrings-mandatory

Change-Id: I907bb4047d42afa4f9044a870f18cbaa724302c8

--- a/tox.ini
+++ b/tox.ini
@@ -89,6 +89,7 @@ commands = flake8 \
     scripts/listpages.py \
     scripts/login.py \
     scripts/maintenance/__init__.py \
+    scripts/misspelling.py \
     scripts/newitem.py \
     scripts/noreferences.py \
     scripts/pagefromfile.py \
