--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,7 @@ install:
     fi
 
   - mkdir ~/.pywikibot
+  - python pwb.py generate_family_file 'http://test.orain.org/' oraintest
   - python -W error::UserWarning -m generate_user_files -dir:~/.pywikibot/ -family:$FAMILY -lang:$LANGUAGE -v -user:"$PYWIKIBOT2_USERNAME"
 
   - if [[ -n "$USER_PASSWORD" && -n "$PYWIKIBOT2_USERNAME" ]]; then
@@ -75,14 +76,14 @@ env:
 
   matrix:
     - LANGUAGE=en FAMILY=wikipedia PYWIKIBOT2_TEST_PROD_ONLY=1
-    - LANGUAGE=fr FAMILY=wiktionary PYSETUP_TEST_EXTRAS=1 PYWIKIBOT2_TEST_PROD_ONLY=1 PYWIKIBOT2_TEST_NO_RC=1
+    - LANGUAGE=zh FAMILY=wikisource PYSETUP_TEST_EXTRAS=1 PYWIKIBOT2_TEST_PROD_ONLY=1 PYWIKIBOT2_TEST_NO_RC=1
 
 matrix:
   include:
     - python: '2.7'
       env: LANGUAGE=he FAMILY=wikivoyage SITE_ONLY=1
     - python: '3.3'
-      env: LANGUAGE=zh FAMILY=wikisource SITE_ONLY=1
+      env: LANGUAGE=en FAMILY=oraintest SITE_ONLY=1
     - python: '3.4'
       env: LANGUAGE=test FAMILY=wikidata SITE_ONLY=1
     - python: 'nightly'
