--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,9 @@ ndg-httpsclient ; python_full_version < '2.7.9'
 pyasn1 ; python_full_version < '2.7.9'
 
 future ; python_version < '2.7'
+
+ipaddr>=2.1.10 ; python_version < '3'
+
 # core interwiki_graph.py:
 git+https://github.com/nlhepler/pydot#egg=pydot-1.0.29
 
