--- a/.travis.yml
+++ b/.travis.yml
@@ -21,21 +21,30 @@ addons:
       - graphviz
       - liblua5.1-0-dev
 
-install:
+before_install:
+  # When PYSETUP_TEST_EXTRAS is not enabled, do not allow the
+  # default 'install' step to install all dependencies listed in
+  # requirements.txt to verify that a minimal install works as expected.
+  # Instead install requests in the before_script step below.
+  - if [[ "$PYSETUP_TEST_EXTRAS" != '1' ]]; then rm requirements.txt ; fi
+
   - if [[ "$SITE_ONLY" == '1' ]]; then export USE_NOSE=1; fi
-  - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then pip install unittest2==0.8.0; fi
-  - pip install six
   - export GITHUB_USER=`echo $TRAVIS_REPO_SLUG | cut -d '/' -f 1`
   - mkdir ~/.python-eggs
   - chmod 700 ~/.python-eggs
-
-  - pip install requests
 
   - if [[ "$GITHUB_USER" != "wikimedia" ]]; then
       export PYWIKIBOT2_TEST_WRITE_FAIL=1 ;
     fi
 
+before_script:
+  - pip install -r dev-requirements.txt
+
+script:
+  - if [[ "$PYSETUP_TEST_EXTRAS" != '1' ]]; then pip install requests ; fi
+
   - mkdir ~/.pywikibot
+
   - python pwb.py generate_family_file 'http://test.orain.org/' oraintest
   - python -W error::UserWarning -m generate_user_files -dir:~/.pywikibot/ -family:$FAMILY -lang:$LANGUAGE -v -user:"$PYWIKIBOT2_USERNAME"
 
@@ -55,7 +64,6 @@ install:
 
   - python -c "import setuptools; print(setuptools.__version__)"
 
-script:
   - if [[ "$USE_NOSE" == "1" ]]; then
       if [[ "$SITE_ONLY" == "1" ]]; then
         echo "Running site tests only code ${LANGUAGE} on family ${FAMILY}" ;
