[bugfix] Enable prefixed ListOption
IntegerOption changes:
- minimum and maximum became properties to be easily overwritten by subclass
- test method does not parse the value anymore. The parse method does it.
- minimum may be equal to maximum
- constructor may fail for non-integer values with ValueError exception
- show default value in Option.format

ListOption changes:
- inherit ListOption from IntegerOption
- overwrite maximum property
- fix for result method

Other changes:
- Add some Test for choice options
- Add ui_options_tests.py and bot_choice.py to flake8-docstrings-mandatory

Bug: T105581
Change-Id: Iba46e2e6c2198678838af493ab89d345077447fd

--- a/tox.ini
+++ b/tox.ini
@@ -37,6 +37,7 @@ commands = flake8 \
     pywikibot/__init__.py \
     pywikibot/backports.py \
     pywikibot/bot.py \
+    pywikibot/bot_choice.py \
     pywikibot/comms/__init__.py \
     pywikibot/comms/http.py \
     pywikibot/comms/rcstream.py \
@@ -131,6 +132,7 @@ commands = flake8 \
     tests/tools_chars_tests.py \
     tests/tools_ip_tests.py \
     tests/tools_tests.py \
+    tests/ui_options_tests.py \
     tests/upload_tests.py \
     tests/wikidataquery_tests.py
 
