Rename IP module tests
Also add tools_chars_tests to mandatory docstring
tox rule, and to Sphinx documentation.

Change-Id: Ic7c2afc165473eef7f30d330d996dc6cc0c036de

--- a/tox.ini
+++ b/tox.ini
@@ -124,11 +124,12 @@ commands = flake8 \
     tests/l10n_tests.py \
     tests/link_tests.py \
     tests/interwiki_graph_tests.py \
-    tests/ipregex_tests.py \
     tests/pwb/ \
     tests/pwb_tests.py \
     tests/script_tests.py \
     tests/timestripper_tests.py \
+    tests/tools_chars_tests.py \
+    tests/tools_ip_tests.py \
     tests/tools_tests.py \
     tests/upload_tests.py \
     tests/wikidataquery_tests.py
