[FIX] Allow apostrophe in password
If the password contains an apostrophe it'll mess up the line in the password
file. E.g. if the password is "foo'bar" it'll add the following line:

  ('username', 'foo'bar')

This escapes now any quotes and it'll generate the following line:

  ('username', 'foo\'bar')

Bug: T105783
Change-Id: I45501958362ef07e20b73448a11f11a4160f3136

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,7 @@ script:
       echo "usernames['wikipedia']['test'] = '$PYWIKIBOT2_USERNAME'" >> ~/.pywikibot/user-config.py ;
       echo "usernames['wikidata']['test'] = '$PYWIKIBOT2_USERNAME'" >> ~/.pywikibot/user-config.py ;
       echo "usernames['commons']['commons'] = '$PYWIKIBOT2_USERNAME'" >> ~/.pywikibot/user-config.py ;
-      echo "('$PYWIKIBOT2_USERNAME', '$USER_PASSWORD')" > ~/.pywikibot/passwordfile ;
+      printf "('%q', '%q')\n" "$PYWIKIBOT2_USERNAME" "$USER_PASSWORD" > ~/.pywikibot/passwordfile ;
       echo "import os" >> ~/.pywikibot/user-config.py ;
       echo "password_file = os.path.expanduser('~/.pywikibot/passwordfile')" >> ~/.pywikibot/user-config.py ;
     fi
