--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,7 @@ script:
   - mkdir ~/.pywikibot
 
   - python pwb.py generate_family_file 'http://test.orain.org/' oraintest
+  - python pwb.py generate_family_file 'https://wiki.musicbrainz.org/' musicbrainz
   - python -W error::UserWarning -m generate_user_files -dir:~/.pywikibot/ -family:$FAMILY -lang:$LANGUAGE -v -user:"$PYWIKIBOT2_USERNAME"
 
   - if [[ -n "$USER_PASSWORD" && -n "$PYWIKIBOT2_USERNAME" ]]; then
@@ -57,6 +58,8 @@ script:
       echo "import os" >> ~/.pywikibot/user-config.py ;
       echo "password_file = os.path.expanduser('~/.pywikibot/passwordfile')" >> ~/.pywikibot/user-config.py ;
     fi
+
+  - echo "authenticate['wiki.musicbrainz.org'] = ('NOTSPAM', 'NOTSPAM')" >> ~/.pywikibot/user-config.py ;
 
   - echo "max_retries = 2" >> ~/.pywikibot/user-config.py
   - echo "maximum_GET_length = 5000" >> ~/.pywikibot/user-config.py
@@ -95,6 +98,8 @@ matrix:
       env: LANGUAGE=wikia FAMILY=wikia PYWIKIBOT2_TEST_NO_RC=1
     - python: '3.3'
       env: LANGUAGE=en FAMILY=oraintest SITE_ONLY=1
+    - python: '3.3'
+      env: LANGUAGE=en FAMILY=musicbrainz SITE_ONLY=1
     - python: '3.4'
       env: LANGUAGE=test FAMILY=wikidata SITE_ONLY=1
     - python: '3.4'
