--- a/.travis.yml
+++ b/.travis.yml
@@ -95,7 +95,7 @@ matrix:
       env: LANGUAGE=en FAMILY=oraintest SITE_ONLY=1
     - python: '3.4'
       env: LANGUAGE=test FAMILY=wikidata SITE_ONLY=1
-    - python: 'nightly'
+    - python: '3.4'
       env: LANGUAGE=ar FAMILY=wiktionary PYWIKIBOT2_TEST_NO_RC=1
     - python: '2.6'
       env: LANGUAGE=wikidata FAMILY=wikidata SITE_ONLY=1
