Fix indents and enable E122 and E127 (mandatory)
Change-Id: Ib1a0e42e10c78eb73d0deb376496c6f5bf56cb48

--- a/tox.ini
+++ b/tox.ini
@@ -38,9 +38,7 @@ commands = flake8 \
     pywikibot/backports.py \
     pywikibot/bot.py \
     pywikibot/bot_choice.py \
-    pywikibot/comms/__init__.py \
-    pywikibot/comms/http.py \
-    pywikibot/comms/rcstream.py \
+    pywikibot/comms/ \
     pywikibot/compat/ \
     pywikibot/config2.py \
     pywikibot/daemonize.py \
@@ -61,8 +59,7 @@ commands = flake8 \
     pywikibot/plural.py \
     pywikibot/textlib.py \
     pywikibot/throttle.py \
-    pywikibot/tools/__init__.py \
-    pywikibot/tools/ip.py \
+    pywikibot/tools/ \
     pywikibot/userinterfaces/__init__.py \
     pywikibot/userinterfaces/terminal_interface.py \
     pywikibot/weblib.py \
@@ -166,12 +163,12 @@ deps =
 commands = {posargs}
 
 [flake8]
-ignore = E122,E127,E241,E265,E402,E731
+ignore = E241,E265,E402,E731
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*
 max_line_length = 130
 
 [pep8]
-ignore = E122,E127,E241,E402,E731
+ignore = E241,E402,E731
 exclude = .tox,.git,./*.egg,ez_setup.py,build,externals,user-config.py,./scripts/i18n/*
 max_line_length = 130
 
