[IMPROV] page/textlib: add remaining docstrings
Only two docstrings were missing from the page module with PEP257 0.6.0 to
comply with the mandatory tox job. And the textlib module was missing only one.

Change-Id: Ied7846896301e2acb587e7414aebb4b26438a69c

--- a/tox.ini
+++ b/tox.ini
@@ -56,8 +56,10 @@ commands = flake8 \
     pywikibot/fixes.py \
     pywikibot/i18n.py \
     pywikibot/login.py \
+    pywikibot/page.py \
     pywikibot/pagegenerators.py \
     pywikibot/plural.py \
+    pywikibot/textlib.py \
     pywikibot/throttle.py \
     pywikibot/tools/__init__.py \
     pywikibot/tools/ip.py \
