Report nose version
Change-Id: I088b49b1e747512359ac7ef84b13c35182cbaf9d

--- a/.travis.yml
+++ b/.travis.yml
@@ -68,6 +68,7 @@ script:
   - python -c "import setuptools; print(setuptools.__version__)"
 
   - if [[ "$USE_NOSE" == "1" ]]; then
+      nosetests --version ;
       if [[ "$SITE_ONLY" == "1" ]]; then
         echo "Running site tests only code ${LANGUAGE} on family ${FAMILY}" ;
         python setup.py nosetests --tests tests --verbosity=2 -a "family=$FAMILY,code=$LANGUAGE" ;
