[FEAT] tools: Add itertools.count function for 2.6
The count function in itertools from Python 2.6 does only support positional
parameters and does not support a step. This uses the count implementation from
the future package just maps it to itertools' implementation in newer versions.

In case an older version of the future package is used (before 0.15.0) it uses
a backported version but informs the user to update.

Change-Id: I779580054642386c90ef2a10a33cfe64cfa1fd23

--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ pyOpenSSL ; python_full_version < '2.7.9'
 ndg-httpsclient ; python_full_version < '2.7.9'
 pyasn1 ; python_full_version < '2.7.9'
 
-future ; python_version < '2.7'
+future>=0.15.0 ; python_version < '2.7'
 
 ipaddr>=2.1.10 ; python_version < '3'
 
