--- a/requirements.txt
+++ b/requirements.txt
@@ -66,7 +66,8 @@ argparse ; python_version < '2.7'
 #   pkg_resources.VersionConflict: (requests 1.2.3 (/usr/lib/python2.7/site-packages), Requirement.parse('requests>=2.2.1'))
 # If you see that on Python 2, change this to flickrapi==1.4.5
 # On Python 3, force pip to install requests 2.2.1, or remove flickrapi below.
-flickrapi
+flickrapi>=1.4.5,<2 ; python_version < '2.7'
+flickrapi ; python_version >= '2.7'
 
 # incomplete core component botirc
 irc ; python_version > '2.6'
