Generating https orain family fails on Python 2.6
Bug: T104568
Change-Id: Ic7da4e97c7e5bff2d35880b83653a803201cb2bb

--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ script:
 
   - mkdir ~/.pywikibot
 
-  - python pwb.py generate_family_file 'https://test.orain.org/' oraintest
+  - if [[ "$FAMILY" == 'oraintest' ]]; then python pwb.py generate_family_file 'https://test.orain.org/' oraintest ; fi
   - python pwb.py generate_family_file 'https://wiki.musicbrainz.org/' musicbrainz
   - if [[ $FAMILY == 'wpbeta' ]]; then
       python -m generate_family_file 'http://'$LANGUAGE'.wikipedia.beta.wmflabs.org/' 'wpbeta' 'y' ;
