Memento support for weblinkchecker
Deprecate pywikibot.weblib in favour of memento_client.
The weblib function for WebCite has been broken for a few months,
and the Internet Archive function has been broken for a week.

Bug: T85001
Change-Id: Iead920493610d0f78faead5cb5aee0921fd0e7bc

--- a/requirements.txt
+++ b/requirements.txt
@@ -86,3 +86,6 @@ beautifulsoup4
 
 # scripts/states_redirect.py
 pycountry
+
+# scripts/weblinkchecker.py
+git+https://github.com/mementoweb/py-memento-client#egg=memento_client-0.5.0
