[tox] Add blockreview.py to flake8-docstrings-mandatory
- doc strings added.

Change-Id: Ibf44ae25a296aff779b99c5c7daf9e64f2465d65

--- a/tox.ini
+++ b/tox.ini
@@ -67,6 +67,7 @@ commands = flake8 \
     scripts/add_text.py \
     scripts/basic.py \
     scripts/blockpageschecker.py \
+    scripts/blockreview.py \
     scripts/capitalize_redirects.py \
     scripts/category.py \
     scripts/category_redirect.py \
