[IMPROV] tox: add missing files
Some files have been added which already work with flake8-docstrings-mandatory.

Change-Id: Id2a15700ea9520307fb3333a960584833ce6182a

--- a/tox.ini
+++ b/tox.ini
@@ -57,12 +57,18 @@ commands = flake8 \
     pywikibot/page.py \
     pywikibot/pagegenerators.py \
     pywikibot/plural.py \
+    pywikibot/proofreadpage.py \
     pywikibot/textlib.py \
     pywikibot/throttle.py \
+    pywikibot/titletranslate.py \
     pywikibot/tools/ \
     pywikibot/userinterfaces/__init__.py \
     pywikibot/userinterfaces/terminal_interface.py \
+    pywikibot/userinterfaces/terminal_interface_base.py \
+    pywikibot/userinterfaces/terminal_interface_unix.py \
+    pywikibot/version.py \
     pywikibot/weblib.py \
+    pywikibot/xmlreader.py \
     scripts/__init__.py \
     scripts/add_text.py \
     scripts/basic.py \
@@ -76,9 +82,11 @@ commands = flake8 \
     scripts/commonscat.py \
     scripts/coordinate_import.py \
     scripts/cosmetic_changes.py \
+    scripts/create_categories.py \
     scripts/data_ingestion.py \
     scripts/delete.py \
     scripts/disambredir.py \
+    scripts/djvutext.py \
     scripts/editarticle.py \
     scripts/fixing_redirects.py \
     scripts/flickrripper.py \
@@ -94,6 +102,7 @@ commands = flake8 \
     scripts/newitem.py \
     scripts/noreferences.py \
     scripts/pagefromfile.py \
+    scripts/patrol.py \
     scripts/piper.py \
     scripts/protect.py \
     scripts/selflink.py \
@@ -119,6 +128,7 @@ commands = flake8 \
     tests/category_tests.py \
     tests/checkimages_tests.py \
     tests/cosmetic_changes_tests.py \
+    tests/data/ \
     tests/data_ingestion_tests.py \
     tests/date_tests.py \
     tests/deletionbot_tests.py \
@@ -129,6 +139,7 @@ commands = flake8 \
     tests/exceptions_tests.py \
     tests/family_tests.py \
     tests/file_tests.py \
+    tests/flow_edit_tests.py \
     tests/flow_tests.py \
     tests/http_tests.py \
     tests/i18n/ \
@@ -158,6 +169,7 @@ commands = flake8 \
     tests/upload_tests.py \
     tests/uploadbot_tests.py \
     tests/weblib_tests.py \
+    tests/weblinkchecker_tests.py \
     tests/wikidataquery_tests.py \
     tests/wikistats_tests.py
 
