[IMPROV] Add docstrings
Change-Id: Idd9212a92a9fd3e2592dc1b7dcb4879d053e0987

--- a/tox.ini
+++ b/tox.ini
@@ -53,6 +53,7 @@ commands = flake8 \
     pywikibot/families/ \
     pywikibot/fixes.py \
     pywikibot/i18n.py \
+    pywikibot/logentries.py \
     pywikibot/login.py \
     pywikibot/page.py \
     pywikibot/pagegenerators.py \
@@ -66,6 +67,9 @@ commands = flake8 \
     pywikibot/userinterfaces/terminal_interface.py \
     pywikibot/userinterfaces/terminal_interface_base.py \
     pywikibot/userinterfaces/terminal_interface_unix.py \
+    pywikibot/userinterfaces/terminal_interface_win32.py \
+    pywikibot/userinterfaces/transliteration.py \
+    pywikibot/userinterfaces/win32_unicode.py \
     pywikibot/version.py \
     pywikibot/weblib.py \
     pywikibot/xmlreader.py \
@@ -151,14 +155,18 @@ commands = flake8 \
     tests/mediawikiversion_tests.py \
     tests/namespace_tests.py \
     tests/oauth_tests.py \
+    tests/page_tests.py \
     tests/proofreadpage_tests.py \
     tests/protectbot_tests.py \
     tests/pwb/ \
     tests/pwb_tests.py \
+    tests/python_tests.py \
+    tests/reflinks_tests.py \
     tests/replacebot_tests.py \
     tests/script_tests.py \
     tests/site_detect_tests.py \
     tests/tests_tests.py \
+    tests/timestamp_tests.py \
     tests/timestripper_tests.py \
     tests/thread_tests.py \
     tests/tk_tests.py \
@@ -170,8 +178,10 @@ commands = flake8 \
     tests/uploadbot_tests.py \
     tests/weblib_tests.py \
     tests/weblinkchecker_tests.py \
+    tests/wikibase_edit_tests.py \
     tests/wikidataquery_tests.py \
-    tests/wikistats_tests.py
+    tests/wikistats_tests.py \
+    tests/xmlreader_tests.py
 
 deps = flake8>=2.2.5
        flake8-docstrings
