[IMPROV] Add docstrings to various test modules
Change-Id: I4bfa6f9c63b08279477d8b4af77d1b99806a6ef9

--- a/tox.ini
+++ b/tox.ini
@@ -125,6 +125,7 @@ commands = flake8 \
     tests/__init__.py \
     tests/aspects.py \
     tests/utils.py \
+    tests/api_tests.py \
     tests/archivebot_tests.py \
     tests/basepage_tests.py \
     tests/bot_tests.py \
@@ -138,6 +139,7 @@ commands = flake8 \
     tests/deletionbot_tests.py \
     tests/disambredir_tests.py \
     tests/djvu_tests.py \
+    tests/dry_api_tests.py \
     tests/edit_tests.py \
     tests/edit_failure_tests.py \
     tests/exceptions_tests.py \
